# Anakin-X

./: .env  Cargo.toml  README.md
src/: auth.rs  main.rs
src/controllers/: admin_controller.rs  auth_controller.rs  mod.rs  ticket_controller.rs  user_controller.rs
src/db/: connection.rs
src/models/: appstate.rs  mod.rs  ticket.rs  user.rs
src/routes/: admin.rs  auth.rs  mod.rs  register.rs  ticket.rs
src/services/: auth_service.rs
src/static/js/: login.js  ticket.js
src/templates/: admin_dashboard.html  index.html  login.html  new_ticket.html  register.html
